[package]
name = "rmqttc"
version = "1.0.1"
edition = "2024"
description = "http download library, supports automatic detection and resumable download with chunks"  
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/rmqttc"

[dependencies]
log = "0.4.28" 
bytes = { version = "1.6.0" }
serde_json = '1.0.145'
anyhow = '1.0.100'
serde={version = '1.0.228',features = ['derive']}
tokio={version = '1.47.1',default-features = false,features = ['macros','rt','sync','time']} 
rumqttc = "0.25.0" 
 

[dev-dependencies] 
tokio = { version = "1.47.1" ,features =  ["full"] }
toolkit-rs={ version = "1.0.15",features = ['panic_handle']}


[[example]]
name = "client"
path = "examples/client.rs"